Details
-
Bug
-
Status: Closed
-
P1: Critical
-
Resolution: Done
-
5.14.1, 5.15
-
-
deb74c609e066b0efd73d1adbc6077e6ca7d8c45 (qt/qtdeclarative/5.14)
Description
If Qt 5.14.1 gets configured with -no-feature-network, qtdeclarative fails to compile because qv4engine.cpp uses QMLEngine::networkAccessManager() which is not present when networking is disabled.
It seems to compile fine when checking the qml_network flag first:
#if QT_CONFIG(qml_network) return engine->qmlEngine()->networkAccessManager(); #else return nullptr; #endif
I haven't verified whether this doesn't cause other issues yet though.
All newer versions of Qt are seemingly affected too.
Attachments
For Gerrit Dashboard: QTBUG-82418 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
291605,2 | Fix build with -no-feature-network | 5.14 | qt/qtdeclarative | Status: MERGED | +2 | 0 |